# Python-Microservice

./: README.md
math-microservice/: .env  alembic.ini  pyproject.toml
math-microservice/alembic/: env.py
math-microservice/alembic/versions/: 6addde6bae4d_create_request_logs_table.py  80328bac28c8_create_request_logs_table.py  8e18b767b8e7_create_request_logs_table.py  cdfd5efa8131_create_request_logs_table.py
math-microservice/src/math_microservice/: __init__.py
math-microservice/src/math_microservice/api/v1/: __init__.py  endpoints.py  schemas.py
math-microservice/src/math_microservice/core/: config.py
math-microservice/src/math_microservice/db/: base.py  session.py
math-microservice/src/math_microservice/middleware/: log_requests.py
math-microservice/src/math_microservice/models/: request_log.py
math-microservice/src/math_microservice/scripts/: test_db.py
math-microservice/src/math_microservice/services/: math_ops.py
